added to the discussion and some refs

--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -4170,3 +4170,225 @@
 Version Number: 1},
 	keywords = {Atmospheric and Oceanic Physics (physics.ao-ph), FOS: Physical sciences, Physics and Society (physics.soc-ph), Statistical Mechanics (cond-mat.stat-mech)},
 }
+
+@article{severson_spring_2021,
+	title = {Spring phenology drives range shifts in a migratory {Arctic} ungulate with key implications for the future},
+	volume = {27},
+	issn = {1354-1013, 1365-2486},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/gcb.15682},
+	doi = {10.1111/gcb.15682},
+	language = {en},
+	number = {19},
+	urldate = {2022-11-21},
+	journal = {Global Change Biology},
+	author = {Severson, John P. and Johnson, Heather E. and Arthur, Stephen M. and Leacock, William B. and Suitor, Michael J.},
+	month = oct,
+	year = {2021},
+	pages = {4546--4563},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\5T97NTZG\\Severson et al. - 2021 - Spring phenology drives range shifts in a migrator.pdf:application/pdf},
+}
+
+@article{buntgen_elevational_2017,
+	title = {Elevational range shifts in four mountain ungulate species from the {\textless}span style="font-variant:small-caps;"{\textgreater}{S}{\textless}/span{\textgreater} wiss {\textless}span style="font-variant:small-caps;"{\textgreater}{A}{\textless}/span{\textgreater} lps},
+	volume = {8},
+	issn = {2150-8925, 2150-8925},
+	shorttitle = {Elevational range shifts in four mountain ungulate species from the {\textless}span style="font-variant},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ecs2.1761},
+	doi = {10.1002/ecs2.1761},
+	language = {en},
+	number = {4},
+	urldate = {2022-11-21},
+	journal = {Ecosphere},
+	author = {Büntgen, Ulf and Greuter, Lucie and Bollmann, Kurt and Jenny, Hannes and Liebhold, Andrew and Galván, J. Diego and Stenseth, Nils C. and Andrew, Carrie and Mysterud, Atle},
+	month = apr,
+	year = {2017},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\U542TQ6G\\Büntgen et al. - 2017 - Elevational range shifts in four mountain ungulate.pdf:application/pdf},
+}
+
+@article{chen_rapid_2011,
+	title = {Rapid {Range} {Shifts} of {Species} {Associated} with {High} {Levels} of {Climate} {Warming}},
+	volume = {333},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.1206432},
+	doi = {10.1126/science.1206432},
+	abstract = {A meta-analysis shows that species are shifting their distributions in response to climate change at an accelerating rate.
+          , 
+            The distributions of many terrestrial organisms are currently shifting in latitude or elevation in response to changing climate. Using a meta-analysis, we estimated that the distributions of species have recently shifted to higher elevations at a median rate of 11.0 meters per decade, and to higher latitudes at a median rate of 16.9 kilometers per decade. These rates are approximately two and three times faster than previously reported. The distances moved by species are greatest in studies showing the highest levels of warming, with average latitudinal shifts being generally sufficient to track temperature changes. However, individual species vary greatly in their rates of change, suggesting that the range shift of each species depends on multiple internal species traits and external drivers of change. Rapid average shifts derive from a wide diversity of responses by individual species.},
+	language = {en},
+	number = {6045},
+	urldate = {2022-11-21},
+	journal = {Science},
+	author = {Chen, I-Ching and Hill, Jane K. and Ohlemüller, Ralf and Roy, David B. and Thomas, Chris D.},
+	month = aug,
+	year = {2011},
+	pages = {1024--1026},
+}
+
+@article{lameris_arctic_2018,
+	title = {Arctic {Geese} {Tune} {Migration} to a {Warming} {Climate} but {Still} {Suffer} from a {Phenological} {Mismatch}},
+	volume = {28},
+	issn = {09609822},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0960982218307450},
+	doi = {10.1016/j.cub.2018.05.077},
+	language = {en},
+	number = {15},
+	urldate = {2022-11-21},
+	journal = {Current Biology},
+	author = {Lameris, Thomas K. and van der Jeugd, Henk P. and Eichhorn, Götz and Dokter, Adriaan M. and Bouten, Willem and Boom, Michiel P. and Litvin, Konstantin E. and Ens, Bruno J. and Nolet, Bart A.},
+	month = aug,
+	year = {2018},
+	pages = {2467--2473.e4},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\SDYBYQDC\\Lameris et al. - 2018 - Arctic Geese Tune Migration to a Warming Climate b.pdf:application/pdf},
+}
+
+@article{inouye_climate_2000,
+	title = {Climate change is affecting altitudinal migrants and hibernating species},
+	volume = {97},
+	issn = {0027-8424, 1091-6490},
+	url = {https://pnas.org/doi/full/10.1073/pnas.97.4.1630},
+	doi = {10.1073/pnas.97.4.1630},
+	abstract = {Calendar date of the beginning of the growing season at high altitude in the Colorado Rocky Mountains is variable but has not changed significantly over the past 25 years. This result differs from growing evidence from low altitudes that climate change is resulting in a longer growing season, earlier migrations, and earlier reproduction in a variety of taxa. At our study site, the beginning of the growing season is controlled by melting of the previous winter's snowpack. Despite a trend for warmer spring temperatures the average date of snowmelt has not changed, perhaps because of the trend for increased winter precipitation. This disjunction between phenology at low and high altitudes may create problems for species, such as many birds, that migrate over altitudinal gradients. We present data indicating that this already may be true for American robins, which are arriving 14 days earlier than they did in 1981; the interval between arrival date and the first date of bare ground has grown by 18 days. We also report evidence for an effect of climate change on hibernation behavior; yellow-bellied marmots are emerging 38 days earlier than 23 years ago, apparently in response to warmer spring air temperatures. Migrants and hibernators may experience problems as a consequence of these changes in phenology, which may be exacerbated if climate models are correct in their predictions of increased winter snowfall in our study area. The trends we report for earlier formation of permanent snowpack and for a longer period of snow cover also have implications for hibernating species.},
+	language = {en},
+	number = {4},
+	urldate = {2022-11-21},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Inouye, David W. and Barr, Billy and Armitage, Kenneth B. and Inouye, Brian D.},
+	month = feb,
+	year = {2000},
+	pages = {1630--1633},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\3BFDPQ3W\\Inouye et al. - 2000 - Climate change is affecting altitudinal migrants a.pdf:application/pdf},
+}
+
+@article{goldberg_hibernation_2021,
+	title = {Hibernation behavior of a federally threatened ground squirrel: climate change and habitat selection implications},
+	volume = {102},
+	issn = {0022-2372, 1545-1542},
+	shorttitle = {Hibernation behavior of a federally threatened ground squirrel},
+	url = {https://academic.oup.com/jmammal/article/102/2/574/6224539},
+	doi = {10.1093/jmammal/gyab021},
+	abstract = {Abstract
+            Hibernation is an adaptation to survive periods of stress, from food limitation or harsh thermal conditions. A key question in contemporary ecology is whether rare, range-restricted species can change their behavior in response to climate change (i.e., through behavioral plasticity). The northern Idaho ground squirrel, Urocitellus brunneus (A. H. Howell, 1928), is a federally threatened species that hibernates for approximately 8 months per year within the bounds of its small range in central Idaho, USA. Changes in temperature, snow accumulation, and summer precipitation, all brought about as a result of climate change, may reduce survival or fecundity of northern Idaho ground squirrels if they cannot adapt to these climate changes. Hibernating species can respond to climate-change-induced thermal challenges in two ways: change their hibernation physiology and behavior (i.e., emergence date or number of torpor bouts) or alter their environment (i.e., change hibernacula depth or location). We explored a suite of intrinsic and extrinsic factors to document the extent to which they influenced hibernation behavior of northern Idaho ground squirrels. Emergence date was positively associated with snowpack and negatively associated with mean winter temperature. Mean minimum skin temperature was negatively associated with canopy closure and slope of a squirrel’s hibernaculum. Duration of the heterothermal period, number of euthermic bouts, and total time spent euthermic were positively associated with body mass. Immergence date and duration of the longest torpor bout were negatively associated with body mass. Warmer temperatures and less snow accumulation in the winter—caused by climate change—likely will cause altered emergence dates. Our results suggest that any future climate-induced changes in snowfall, ambient temperature, food availability, or habitat likely will impact survival of this rare ground squirrel, because such changes will cause changes in hibernation behavior, percent mass loss during hibernation, and duration of the active season when small mammals are more susceptible to predation.},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-21},
+	journal = {Journal of Mammalogy},
+	author = {Goldberg, Amanda R and Conway, Courtney J},
+	editor = {Hayes, Loren},
+	month = jun,
+	year = {2021},
+	pages = {574--587},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\X99HB6Z6\\Goldberg and Conway - 2021 - Hibernation behavior of a federally threatened gro.pdf:application/pdf},
+}
+
+@article{hoyt_ecology_2021,
+	title = {Ecology and impacts of white-nose syndrome on bats},
+	volume = {19},
+	issn = {1740-1526, 1740-1534},
+	url = {http://www.nature.com/articles/s41579-020-00493-5},
+	doi = {10.1038/s41579-020-00493-5},
+	language = {en},
+	number = {3},
+	urldate = {2022-11-21},
+	journal = {Nature Reviews Microbiology},
+	author = {Hoyt, Joseph R. and Kilpatrick, A. Marm and Langwig, Kate E.},
+	month = mar,
+	year = {2021},
+	pages = {196--210},
+}
+
+@article{aponte_forest_2016,
+	title = {Forest fires and climate change: causes, consequences and management options},
+	volume = {25},
+	issn = {1049-8001},
+	shorttitle = {Forest fires and climate change},
+	url = {http://www.publish.csiro.au/?paper=WFv25n8_FO},
+	doi = {10.1071/WFv25n8_FO},
+	language = {en},
+	number = {8},
+	urldate = {2022-11-21},
+	journal = {International Journal of Wildland Fire},
+	author = {Aponte, Cristina and de Groot, William J. and Wotton, B. Mike},
+	year = {2016},
+	pages = {i},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\S5UQ5NZW\\Aponte et al. - 2016 - Forest fires and climate change causes, consequen.pdf:application/pdf},
+}
+
+@article{ruthrof_how_2016,
+	title = {How drought-induced forest die-off alters microclimate and increases fuel loadings and fire potentials},
+	volume = {25},
+	issn = {1049-8001},
+	url = {http://www.publish.csiro.au/?paper=WF15028},
+	doi = {10.1071/WF15028},
+	abstract = {Forest die-offs associated with drought and heat have recently occurred across the globe, raising concern that associated changes in fuels and microclimate could link initial die-off disturbance to subsequent fire disturbance. Despite widespread concern, little empirical data exist. Following forest die-off in the Northern Jarrah Forest, south-western Australia, we quantified fuel dynamics and associated microclimate for die-off and control plots. Sixteen months post die-off, die-off plots had significantly increased 1-h fuels (11.8 vs 9.8 tonnes ha–1) but not larger fuel classes (10-h and 100-h fuels). Owing to stem mortality, die-off plots had significantly greater standing dead wood mass (100 vs 10 tonnes ha–1), visible sky (hemispherical images analysis: 31 vs 23\%) and potential near-ground solar radiation input (measured as Direct Site Factor: 0.52 vs 0.34). Supplemental mid-summer microclimate measurements (temperature, relative humidity and wind speed) were combined with long-term climatic data and fuel load estimates to parameterise fire behaviour models. Fire spread rates were predicted to be 30\% greater in die-off plots with relatively equal contributions from fuels and microclimate, highlighting need for operational consideration by fire managers. Our results underscore potential for drought-induced tree die-off to interact with subsequent fire under climate change.},
+	language = {en},
+	number = {8},
+	urldate = {2022-11-21},
+	journal = {International Journal of Wildland Fire},
+	author = {Ruthrof, Katinka X. and Fontaine, Joseph B. and Matusick, George and Breshears, David D. and Law, Darin J. and Powell, Sarah and Hardy, Giles},
+	year = {2016},
+	pages = {819},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\2CSI5VFX\\Ruthrof et al. - 2016 - How drought-induced forest die-off alters microcli.pdf:application/pdf},
+}
+
+@article{post_caching_2006,
+	title = {Caching as a strategy for surviving periods of resource scarcity; a comparative study of two species of {Neotoma}},
+	volume = {20},
+	issn = {0269-8463, 1365-2435},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2435.2006.01142.x},
+	doi = {10.1111/j.1365-2435.2006.01142.x},
+	language = {en},
+	number = {4},
+	urldate = {2022-11-21},
+	journal = {Functional Ecology},
+	author = {Post, D. M. and Snyder, M. V. and Finck, E. J. and Saunders, D. K.},
+	month = aug,
+	year = {2006},
+	pages = {717--722},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\57NKCKPM\\Post et al. - 2006 - Caching as a strategy for surviving periods of res.pdf:application/pdf},
+}
+
+@article{armitage_energetics_2003,
+	title = {Energetics of hibernating yellow-bellied marmots ({Marmota} flaviventris)},
+	volume = {134},
+	issn = {10956433},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1095643302002192},
+	doi = {10.1016/S1095-6433(02)00219-2},
+	language = {en},
+	number = {1},
+	urldate = {2022-11-21},
+	journal = {Comparative Biochemistry and Physiology Part A: Molecular \& Integrative Physiology},
+	author = {Armitage, Kenneth B and Blumstein, Daniel T and Woods, Brett C},
+	month = jan,
+	year = {2003},
+	pages = {101--114},
+}
+
+@article{nespolo_why_2022,
+	title = {Why bears hibernate? {Redefining} the scaling energetics of hibernation},
+	volume = {289},
+	issn = {0962-8452, 1471-2954},
+	shorttitle = {Why bears hibernate?},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2022.0456},
+	doi = {10.1098/rspb.2022.0456},
+	abstract = {Hibernation is a natural state of suspended animation that many mammals experience and has been interpreted as an adaptive strategy for saving energy. However, the actual amount of savings that hibernation represents, and particularly its dependence on body mass (the ‘scaling’) has not been calculated properly. Here, we estimated the scaling of daily energy expenditure of hibernation (DEE
+              H
+              ), covering a range of five orders of magnitude in mass. We found that DEE
+              H
+              scales isometrically with mass, which means that a gram of hibernating bat has a similar metabolism to that of a gram of bear, 20 000 times larger. Given that metabolic rate of active animals scales allometrically, the point where these scaling curves intersect with DEE
+              H
+              represents the mass where energy savings by hibernation are zero. For BMR, these zero savings are attained for a relatively small bear (approx. 75 kg). Calculated on a per cell basis, the cellular metabolic power of hibernation was estimated to be 1.3 × 10
+              −12
+              ± 2.6 × 10
+              −13
+              W cell
+              −1
+              , which is lower than the minimum metabolism of isolated mammalian cells. This supports the idea of the existence of a minimum metabolism that permits cells to survive under a combination of cold and hypoxia.},
+	language = {en},
+	number = {1973},
+	urldate = {2022-11-21},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Nespolo, Roberto F. and Mejias, Carlos and Bozinovic, Francisco},
+	month = apr,
+	year = {2022},
+	pages = {20220456},
+}
