--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -261,7 +261,7 @@ When the (un)predictability in $R$ chances over time (figure \@ref(fig:multipane
 
 Most habitats with appreciable seasonal changes in climate will require models to account for changes in both $\e(R)$ and $\var(R)$, since periods of high productivity can often be more variable than times of dormancy or lower productivity, and the variability in $R$ can often change both within and between years. In highly variable and stochastic environments, animals will likely have higher spatial needs, particularly if they are required to collect and store resources for periods of scarcity or increased energetic needs. These include reproductive periods, whether this be due to pregnancy [@ref], to feed offspring [@ref], or because the animal's needs change over time [e.g., male deer growing antlers: @french_nutrient_1956; @smolko_soil_2022]. Thus, failing to account for changes in $\var(R)$ can result in serious underestimations of animals' spatial needs, which may lead to decreases in population fitness and size while also increasing the risk of population collapse and human-wildlife conflict [@mukeka_human-wildlife_2019].
 
-Extreme events [@logares_black_2012; @anderson_black-swan_2017] such as heat domes, blizzards, fires, disease outbreaks, and oil spills are important events which are hard to predict (i.e., highly stochastic) and can cause great population instability by causing mass die-offs that drastically reduce the size and genetic diversity of a population [e.g., @matkin_ongoing_2008; @murray_pathogens_2006; @widmer_effects_2004; @reed_frequency_2003; @hollings_trophic_2014; @ameca_y_juarez_natural_2012; @berger_climate_2018]. Managing the intensity of and frequency of extreme events (e.g., controlled burns) can increase the stability of a habitat while promoting habitat diversity and adaptations to the event [@staver_tree_2011; @tingley_pyrodiversity_2016; @nimmo_animal_2019].
+Extreme events [@logares_black_2012; @anderson_black-swan_2017] such as heat domes, hurricanes [@widmer_effects_2004]; severe storms [@berger_climate_2018], fires [@ruthrof_how_2016], new diseases [@murray_pathogens_2006; @hollings_trophic_2014; @hoyt_ecology_2021], and anthropogenic die-offs [@matkin_ongoing_2008] are important events which are hard to predict (i.e., highly stochastic) and can cause great population instability by drastically reducing the size and genetic diversity of a population [@reed_frequency_2003; @ameca_y_juarez_natural_2012]. Managing the intensity of and frequency of extreme events [e.g., @aponte_forest_2016] can increase the stability of a habitat while promoting habitat diversity and adaptations to the event [@staver_tree_2011; @tingley_pyrodiversity_2016; @nimmo_animal_2019].
 
 The effects of $\var(R)$ on animals' spatial requirements most likely vary between species, since different species have different energetic and nutritional needs [@boratynski_energetic_2020; @noonan_effects_2020], so the degree to which $R$ varies will likely affects each species differently. Small-scale variations may be sufficient to causes changes in behavior for some small animals, while animals with larger spatial needs may not detect such differences. @rizzuto_forage_2021 found that the 50%, 75%, and 90% utilization distributions (UDs) of snowshoe hares (*Lepus americanus*) increased with average C:N in lowbush blueberry as well as the coefficient of variation for C:N, which suggests that the hares expanded their home range in response to both resource scarcity and the variance in resource scarcity. Similarly, @mueller_how_2011 demonstrated that ungulate species in more variable ecosystems move more than species in more stable landscapes and that they are more likely to be nomadic. In contrast, @lucherini_habitat_1996 found that red foxes (*Vulpes vulpes*) living in areas with more habitats per hectare (i.e., more heterogeneous habitats) required exponentially less space than foxes that lived in more homogeneous regions. Similarly, @herfindal_prey_2005 found that the home ranges Canadian lynx (*Lynx canadensis*) decreased with seasonality. A subsequent analysis by @nilsen_can_2005 found that various carnivores respond to resource variability and seasonality (albeit in contrasting ways) using the Canadian lynx data of @herfindal_prey_2005 along with data on wolverines (*Gulo gulo*), bobcats (*Lynx rufus*), and coyotes (*Canis latrans*). Additionally, @nilsen_can_2005 also demonstrate that the effect of $\var(R)$ on the home range size of wolves (*Canis lupus*) and fishers (*Martes pennanti*) depends on $\e(R)$, so it is not only important to account for both $e(R)$ and $\var(R)$ but also interaction effects between the two. It is worth noting that carnivores may be more susceptible to $\var(R)$ since animal prey's ability to move makes their abundance and location less predictable than those of plants. Since, the effects of $e(R)$ and $\var(R)$ may also affect prey abundance, it is important to account for both $e(R)$ and $\var(R)$ as well as any interactive effects between the two and how the effects may vary between animals with different diets or from different trophic levels [@harestad_home_1979; @noonan_effects_2020].
 
@@ -291,27 +291,29 @@ knitr::include_graphics('../figures/simulation-regression-plots.png')
 
 # Discussion
 
-\noindent This paper presents a new unifying framework for estimating the effects of resource abundance and stochasticity on animals' spatial needs. The hypotheses and methods we present allow researchers to generalize the effects resource abundance and stochasticity have on animals' spatial needs by building upon previous work rather than stating their results as *de novo* findings. Instead, one can test whether members of the same population or species behave similarly, and whether all members of the group have a common functional response [@ref]. Individuals and populations that were once thought to have markedly different behaviors and spatial needs may instead have a single common functional response but different levels of $\e(R)$ and $\var(R)$ [@examples].
+\noindent This paper presents a new unifying framework for estimating the effects of resource abundance and stochasticity on animals' spatial needs. The hypotheses and methods we present allow researchers to generalize the effects resource abundance and stochasticity have on animals' spatial needs by building upon previous work rather than stating their results as *de novo* findings. Instead, one can test whether members of the same population or species behave similarly, and whether all members of the group have a common functional response using hierarchical models [@pedersen_hierarchical_2019]. Individuals and populations that were once thought to have markedly different behaviors and spatial needs may instead have a single common functional response but different levels of $\e(R)$ and $\var(R)$ [@examples].
 
 In this discussion section, we make considerations about the effects of $\e(R)$ and $\var(R)$ on various animal adaptations, including movement behaviors, energy storage, and spatiotemporal memory. We then illustrate how one may apply this framework to their own data and we also provide an empirical example using tracking data on a lowland tapir (*Tapirus terrestris*) from the Brazilian Cerrado. Finally, we demonstrate how to use this framework to create products that can inform conservation-based decisions, including predicting animals' spatial needs and assessing the quality of potential (and current) conservation areas. 
 
 ## Animal adaptations to changes in $\e(R)$ and $\var(R)$
 
-@liow_lower_2009: *Lower Extinction Risk in Sleep-or-Hide Mammals*
+\noindent The spatiotemporal scales over which an event occurs are a main determinant of whether an animal will be able to predict the event and how it will respond to it (or fail to do so). Events which occur at the scale of the organism [i.e. approximately one or more times per lifetime and within the animal's spatial range; see @frankham_importance_2004] are more likely to be perceived as a threat or boon worth preparing for [e.g., elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019]. Smaller and short-lived organisms (e.g., mice) are more likely to be be severely impacted by stochastic events than larger ones (e.g. elephants), since larger organisms can have bigger energy reserves [@lindstedt_seasonality_1985], can move longer distances over short periods of time [@hirt_general_2017], and tend to have longer lifespans, generation times, and developmental periods [@brown_toward_2004] that allow them to develop or memory about the frequency and severity of such events [elephants: @foley_severe_2008; @polansky_elucidating_2015]. However, the short generation time and high reproductive rate of smaller *r-selected* species [@pianka_r-_1970; @brown_toward_2004] may also promote traits that increase survival following frequent extreme events by increasing population survival rates and genetic diversity through the production of numerous offspring [@examples]. Frequent and repetitive events may result in changes in animal behavior and memory [framework: @riotte-lambert_environmental_2020; elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019; elk: @falcon-cortes_hierarchical_2021], while events that occur over larger spatiotemporal scales are more likely to promote slower changes through adaptation, natural selection, and evolution [@grant_evolution_2017; @logares_black_2012; @anderson_black-swan_2017; @gienapp_climate_2008].
 
-\noindent The spatiotemporal scales over which an event occurs are a main determinant of whether an animal will be able to predict the event and how it will respond to it (or fail to do so). Events which occur at the scale of the organism [i.e. approximately one or more times per lifetime and within the animal's spatial range; see @frankham_importance_2004] are more likely to be perceived as a threat or boon worth preparing for [e.g., elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019]. Smaller and short-lived organisms (e.g., mice) are more likely to be be severely impacted by stochastic events than larger ones (e.g. elephants), since larger organisms can have bigger energy reserves [@lindstedt_seasonality_1985], can move longer distances over short periods of time [@hirt_general_2017], and tend to have longer lifespans, generation times, and developmental periods [@brown_toward_2004] that allow them to develop or memory about the frequency and severity of such events [@foley_severe_2008; @polansky_elucidating_2015]. However, the short generation time and high reproductive rate of smaller *r-selected* species [@pianka_r-_1970; @brown_toward_2004] may also promote traits that increase survival following frequent extreme events by increasing population survival rates and genetic diversity through the production of numerous offspring [@examples]. Frequent events may result in changes in animal behavior and memory [framework: @riotte-lambert_environmental_2020; elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019; elk: @falcon-cortes_hierarchical_2021], while events that occur over larger spatiotemporal scales are more likely to promote slower changes through adaptation, natural selection, and evolution [@grant_evolution_2017; @logares_black_2012; @anderson_black-swan_2017; @gienapp_climate_2008], including the developing of memory [framework: @riotte-lambert_environmental_2020; @fagan_spatial_2013; roe deer: @ranc_memory_2022; elk: @falcon-cortes_hierarchical_2021; blue whales: @abrahms_memory_2019; elephants: @polansky_elucidating_2015].
+Events occur which multiple times at relatively predictable intervals during an animal's lifespan and over multiple generations, such as the alternating of seasons, allow it to anticipate times of scarcity and prepare for them by, for instance, increasing its fat storage [marmots: @armitage_energetics_2003; bears: @nespolo_why_2022] or caching resources [@post_caching_2006]. Of course, an animal with a life span shorter than a year will be unable to perceive the cyclical alternating of the seasons, and an animal with a life span of a few weeks or days may not even experience substantial changes in weather and temperature other than lower temperatures at night than during the day. When an animal's expected lifespan is at least one or more years, preparing for predictable times of abundance and scarcity becomes an advantage (and often a necessity). In such cases, animals can increase their chances of survival via physiological and behavioral adaptations, including torpor [marmots: @inouye_climate_2000; ground squirrels: @goldberg_hibernation_2021]; and memory [framework: @riotte-lambert_environmental_2020; @fagan_spatial_2013; roe deer: @ranc_memory_2022; caribou: @cavedon_genomic_2022; elk: @falcon-cortes_hierarchical_2021; elephants: @polansky_elucidating_2015], which is required for migration [butterflies: @stefanescu_timing_2021; bison and mule deer: @geremia_migrating_2019; mule deer: @merkle_spatial_2019; blue whales: @abrahms_memory_2019; elk: @rickbeil_plasticity_2019; @middleton_green-wave_2018]. However, relying on environmental cues rather than on memory alone [ungulates: @severson_spring_2021; @rickbeil_plasticity_2019; @buntgen_elevational_2017; birds: @jonzen_rapid_2006], can prevent animals from becoming trapped in sub-optimal conditions [@abrahms_memory_2019].
 
-* range shifts can help species overcome changing conditions, but they can also damage species that are being encroached upon, such as species that either fail to adapt (i.e., do not shift, too) or species that **cannot** shift
+Adaptability and responsiveness to change are strong determinants to whether an animal survives in a changing environment [@riotte-lambert_environmental_2020]. An animal's ability to recognize cues that precede extreme events or periods of scarcity or abundance can have appreciable effects on the animal's chance of survival and reproduction. For example, yellow-bellied marmots (**) []
 
-Adaptability and responsiveness to change are strong determinants to whether an animal survives in a changing environment [@riotte-lambert_environmental_2020]. An animal's ability to recognize cues that precede extreme events or periods of scarcity or abundance can have appreciable effects on the animal's chance of survival and reproduction. For example, ungulates' ability to time their yearly migrations on cues such as available forage biomass, hunting pressure, snow fall, and snow melt allow them to adapt to changes in both $\e(R)$ and $\var(R)$, while their spatial memory [@falcon-cortes_hierarchical_2021; @ranc_memory_2022] allows them to optimize their movement by reducing the amount of time spent exploring. Similarly, the ability of trans-Saharian migrant birds to adapt their migration timing based on environmental cues allows them to account for differences $\e(R)$ between years [@jonzen_rapid_2006]. However, relying strongly on short-term cues rather than depending on memory can also cause animals to fail to find crucial resources [@polansky_elucidating_2015; @foley_severe_2008] or become trapped in sub-optimal locations if long-term conditions and cycles change unexpectedly [e.g., blue whales: @abrahms_memory_2019; bison: @merkle_spatial_2019].
+Likewise, ungulates' ability to time their yearly migrations on cues such as available forage biomass, hunting pressure, snow fall, and snow melt allow them to adapt to changes in both $\e(R)$ and $\var(R)$, while their spatial memory [@falcon-cortes_hierarchical_2021; @ranc_memory_2022] allows them to optimize their large-scale movement by reducing the amount of time spent exploring. Similarly, the ability of trans-Saharan migrant birds to adapt their migration timing based on environmental cues allows them to account for differences $\e(R)$ between years [@jonzen_rapid_2006]. However, relying strongly on short-term cues rather than depending on memory can also cause animals to fail to find crucial resources [@polansky_elucidating_2015; @foley_severe_2008].
+
+Recent changes in climate during the last few decades have caused some species to shift their ranges [terrestrial animals: @chen_rapid_2011; ungulates: @severson_spring_2021; @buntgen_elevational_2017], including migratory animals [@examples]. While range shifts can help species overcome changing conditions, they can still result in phenological mismatches [@lameris_arctic_2018], and they also add pressure to the species that already live in the habitat, such as species that either fail to adapt (i.e., do not also shift) or species that are unable shift. Specialists and obligate symbionts are less likely to shift since their range is determined by their food sources' or associates' ability to move and adapt, too. Consequently, the arrival of new species may exacerbate the stressors such animals are already facing.
 
 <!--
 Notes:
 
 @rickbeil_plasticity_2019:
 - Many species use seasonal migration to track emerging resources (Fryxell, Greever, & Sinclair, 1988), reduce predation risk (Hebblewhite & Merrill, 2009), or avoid disease and parasites (Altizer, Bartel, & Han, 2011).
-- Migrations to track resources are often timed to coincide with peak plant and insect emergence (Aikens et al., 2017; Jonzén et al., 2006; Merkle et al., 2016)
-- there is growing evidence that some [bird] populations are adjusting their behavior, suggesting that migration, specifically migration timing, may be more plastic than previously expected (Jonzén, Hedenstrom, & Lundberg, 2007; Jonzén et al., 2006; Lameris et al., 2018) and highlighting a potential measure of resilience in the face of climate change
+- Migrations to track resources are often timed to coincide with peak plant and insect emergence (Aikens et al., 2017; Jonzén et al., 2006)
+- there is growing evidence that some [bird] populations are adjusting their behavior, suggesting that migration, specifically migration timing, may be more plastic than previously expected (Jonzén, Hedenstrom, & Lundberg, 2007; Jonzén et al., 2006) and highlighting a potential measure of resilience in the face of climate change
 -->
 
 ## Applying this framework
@@ -381,9 +383,6 @@ we use NDVI [@ref] as a proxy for resource abundance.
 \newpage
 
 # MISC
-
-The ability of a specialist or obligate symbiont to shift its home range or adapt will likely depend strongly on its food source's or associate's ability to move or adapt, too.
-
 
 Other empirical refs to possibly add: @lindstedt_seasonality_1985, @jonzen_rapid_2006, @wolkovich_warming_2012, @falcon-cortes_hierarchical_2021, @nathan_big-data_2022
 
