--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -774,18 +774,25 @@
 	file = {Accepted Version:C\:\\Users\\stefa\\Zotero\\storage\\3D2VKBSM\\Wood et al. - 2013 - Straightforward intermediate rank tensor product s.pdf:application/pdf},
 }
 
-@book{r_core_team_r_2021,
+@book{pya_scam_2022,
+	title = {scam: {Shape} {Constrained} {Additive} {Models}},
+	url = {https://CRAN.R-project.org/package=scam},
+	author = {Pya, Natalya},
+	year = {2022},
+}
+
+@book{r_core_team_r_2022,
 	address = {Vienna, Austria},
 	title = {R: {A} {Language} and {Environment} for {Statistical} {Computing}},
 	url = {https://www.R-project.org/},
 	publisher = {R Foundation for Statistical Computing},
 	author = {{R Core Team}},
-	year = {2021},
+	year = {2022},
 }
 
 @book{fleming_ctmm_2021,
 	title = {ctmm: {Continuous}-{Time} {Movement} {Modeling}},
-	url = {https://github.com/ctmm-initiative/ctmm, https://groups.google.com/g/ctmm-user}},
+	url = {https://github.com/ctmm-initiative/ctmm, https://groups.google.com/g/ctmm-user},
 	author = {Fleming, Christen H. and Calabrese, Justin M.},
 	year = {2021},
 }
@@ -4189,10 +4196,10 @@ Version Number: 1},
 }
 
 @article{buntgen_elevational_2017,
-	title = {Elevational range shifts in four mountain ungulate species from the {\textless}span style="font-variant:small-caps;"{\textgreater}{S}{\textless}/span{\textgreater} wiss {\textless}span style="font-variant:small-caps;"{\textgreater}{A}{\textless}/span{\textgreater} lps},
+	title = {Elevational range shifts in four mountain ungulate species from the {Swiss} {Alps}},
 	volume = {8},
 	issn = {2150-8925, 2150-8925},
-	shorttitle = {Elevational range shifts in four mountain ungulate species from the {\textless}span style="font-variant},
+	shorttitle = {Elevational range shifts in four mountain ungulate species from the {Swiss} {Alps}},
 	url = {https://onlinelibrary.wiley.com/doi/10.1002/ecs2.1761},
 	doi = {10.1002/ecs2.1761},
 	language = {en},
@@ -4391,4 +4398,201 @@ Version Number: 1},
 	month = apr,
 	year = {2022},
 	pages = {20220456},
+}
+
+@article{leung_smaller_2022,
+	title = {Smaller species are not better off},
+	volume = {6},
+	issn = {2397-334X},
+	url = {https://www.nature.com/articles/s41559-021-01636-4},
+	doi = {10.1038/s41559-021-01636-4},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-23},
+	journal = {Nature Ecology \& Evolution},
+	author = {Leung, Brian},
+	month = feb,
+	year = {2022},
+	pages = {134--135},
+}
+
+@article{mueller_social_2013,
+	title = {Social {Learning} of {Migratory} {Performance}},
+	volume = {341},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.1237139},
+	doi = {10.1126/science.1237139},
+	abstract = {Follow the Leader
+            
+              How birds migrate between wintering and breeding grounds, often over thousands of kilometers through difficult conditions, remains mysterious. The recovery of North American Whooping Cranes by release of captive-reared birds trained to migrate by following aircraft provided an opportunity for
+              
+                Mueller
+                et al.
+              
+              (p.
+              999
+              ; see the cover) to analyze 8 years of data for individual birds. The presence of older birds within a group of migrating cranes significantly decreased the deviations the flock took from a straight line migration path. The lack of evidence for a genetic component indicates that social learning dominates any innate capacity in developing migratory behavior.
+            
+          , 
+            Whooping cranes learn their annual migration routes from their neighbors.
+          , 
+            Successful bird migration can depend on individual learning, social learning, and innate navigation programs. Using 8 years of data on migrating whooping cranes, we were able to partition genetic and socially learned aspects of migration. Specifically, we analyzed data from a reintroduced population wherein all birds were captive bred and artificially trained by ultralight aircraft on their first lifetime migration. For subsequent migrations, in which birds fly individually or in groups but without ultralight escort, we found evidence of long-term social learning, but no effect of genetic relatedness on migratory performance. Social learning from older birds reduced deviations from a straight-line path, with 7 years of experience yielding a 38\% improvement in migratory accuracy.},
+	language = {en},
+	number = {6149},
+	urldate = {2022-11-24},
+	journal = {Science},
+	author = {Mueller, Thomas and O’Hara, Robert B. and Converse, Sarah J. and Urbanek, Richard P. and Fagan, William F.},
+	month = aug,
+	year = {2013},
+	pages = {999--1002},
+}
+
+@article{fisher_wildlife_2018,
+	title = {Wildlife winners and losers in an oil sands landscape},
+	volume = {16},
+	issn = {15409295},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/fee.1807},
+	doi = {10.1002/fee.1807},
+	language = {en},
+	number = {6},
+	urldate = {2022-12-04},
+	journal = {Frontiers in Ecology and the Environment},
+	author = {Fisher, Jason T and Burton, A Cole},
+	month = aug,
+	year = {2018},
+	pages = {323--328},
+}
+
+@article{taylor_energetics_1982,
+	title = {Energetics and mechanics of terrestrial locomotion. {I}. {Metabolic} energy consumption as a function of speed and body size in birds and mammals},
+	volume = {97},
+	issn = {1477-9145, 0022-0949},
+	url = {https://journals.biologists.com/jeb/article/97/1/1/34642/Energetics-and-mechanics-of-terrestrial-locomotion},
+	doi = {10.1242/jeb.97.1.1},
+	abstract = {This series of four papers investigates the link between the energetics and the mechanics of terrestrial locomotion. Two experimental variables are used throughout the study: speed and body size. Mass-specific metabolic rates of running animals can be varied by about tenfold using either variable. This first paper considers metabolic energy consumed during terrestrial locomotion. New data relating rate of oxygen consumption and speed are reported for: eight species of wild and domestic artiodactyls; seven species of carnivores; four species of primates; and one species of rodent. These are combined with previously published data to formulate a new allometric equation relating mass-specific rates of oxygen consumed (VO2/Mb) during locomotion at a constant speed to speed and body mass (based on data from 62 avian and mammalian species): VO2/Mb = 0.533 Mb-0.316.vg + 0.300 Mb-0.303 where VO2/Mb has the units ml O2 s-1 kg-1; Mb is in kg; and vg is in m s-1. This equation can be expressed in terms of mass-specific rates of energy consumption (Emetab/Mb) using the energetic equivalent of 1 ml O2 = 20.1 J because the contribution of anaerobic glycolysis was negligible: Emetab/Mb = 10.7 Mb-0.316.vg + 6.03 Mb-0.303 where Emetab/Mb has the units watts/kg. This new relationship applies equally well to bipeds and quadrupeds and differs little from the allometric equation reported 12 years ago by Taylor, Schmid-Nielsen \& Raab (1970). Ninety per cent of the values calculated from this genera equation for the diverse assortment of avian and mammalian species included in this regression fall within 25\% of the observed values at the middle of the speed range where measurements were made. This agreement is impressive when one considers that mass-specific rates of oxygen consumption differed by more than 1400\% over this size range of animals.},
+	language = {en},
+	number = {1},
+	urldate = {2022-12-12},
+	journal = {Journal of Experimental Biology},
+	author = {Taylor, C. R. and Heglund, N. C. and Maloiy, G. M.},
+	month = apr,
+	year = {1982},
+	pages = {1--21},
+}
+
+@article{alston_mitigating_2022,
+	title = {Mitigating pseudoreplication and bias in resource selection functions with autocorrelation‐informed weighting},
+	issn = {2041-210X, 2041-210X},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/2041-210X.14025},
+	doi = {10.1111/2041-210X.14025},
+	language = {en},
+	urldate = {2022-12-12},
+	journal = {Methods in Ecology and Evolution},
+	author = {Alston, Jesse M. and Fleming, Christen H. and Kays, Roland and Streicher, Jarryd P. and Downs, Colleen T. and Ramesh, Tharmalingam and Reineking, Björn and Calabrese, Justin M.},
+	month = nov,
+	year = {2022},
+	pages = {2041--210X.14025},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\4W4PSW9G\\Alston et al. - 2022 - Mitigating pseudoreplication and bias in resource .pdf:application/pdf},
+}
+
+@article{cayuela_determinants_2020,
+	title = {Determinants and {Consequences} of {Dispersal} in {Vertebrates} with {Complex} {Life} {Cycles}: {A} {Review} of {Pond}-{Breeding} {Amphibians}},
+	volume = {95},
+	issn = {0033-5770, 1539-7718},
+	shorttitle = {Determinants and {Consequences} of {Dispersal} in {Vertebrates} with {Complex} {Life} {Cycles}},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/707862},
+	doi = {10.1086/707862},
+	language = {en},
+	number = {1},
+	urldate = {2022-12-28},
+	journal = {The Quarterly Review of Biology},
+	author = {Cayuela, Hugo and Valenzuela-Sánchez, Andrés and Teulier, Loïc and Martínez-Solano, Íñigo and Léna, Jean-Paul and Merilä, Juha and Muths, Erin and Shine, Richard and Quay, Ludivine and Denoël, Mathieu and Clobert, Jean and Schmidt, Benedikt R.},
+	month = mar,
+	year = {2020},
+	pages = {1--36},
+	file = {Accepted Version:C\:\\Users\\stefa\\Zotero\\storage\\F98BNKEH\\Cayuela et al. - 2020 - Determinants and Consequences of Dispersal in Vert.pdf:application/pdf},
+}
+
+@article{munguia_dispersal_2008,
+	title = {Dispersal limitation and geographical distributions of mammal species},
+	volume = {35},
+	issn = {03050270, 13652699},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2699.2008.01921.x},
+	doi = {10.1111/j.1365-2699.2008.01921.x},
+	language = {en},
+	number = {10},
+	urldate = {2022-12-28},
+	journal = {Journal of Biogeography},
+	author = {Munguía, Mariana and Townsend Peterson, Andrew and Sánchez-Cordero, Víctor},
+	month = oct,
+	year = {2008},
+	pages = {1879--1887},
+}
+
+@article{akaike_new_1974,
+	title = {A new look at the statistical model identification},
+	volume = {19},
+	issn = {0018-9286},
+	url = {http://ieeexplore.ieee.org/document/1100705/},
+	doi = {10.1109/TAC.1974.1100705},
+	language = {en},
+	number = {6},
+	urldate = {2022-12-28},
+	journal = {IEEE Transactions on Automatic Control},
+	author = {Akaike, H.},
+	month = dec,
+	year = {1974},
+	pages = {716--723},
+	file = {Accepted Version:C\:\\Users\\stefa\\Zotero\\storage\\CXI4BD6Q\\Akaike - 1974 - A new look at the statistical model identification.pdf:application/pdf},
+}
+
+@article{ramos_pereira_structure_2013,
+	title = {Structure of {Small} {Mammal} {Assemblages} {Across} {Flooded} and {Unflooded} {Gallery} {Forests} of the {Amazonia}-{Cerrado} {Ecotone}},
+	volume = {45},
+	issn = {00063606},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/btp.12027},
+	doi = {10.1111/btp.12027},
+	language = {en},
+	number = {4},
+	urldate = {2022-12-30},
+	journal = {Biotropica},
+	author = {Ramos Pereira, Maria and Rocha, Rita G. and Ferreira, Eduardo and Fonseca, Carlos},
+	month = jul,
+	year = {2013},
+	pages = {489--496},
+}
+
+@article{saraux_plasticity_2011,
+	title = {Plasticity in foraging strategies of inshore birds: how {Little} {Penguins} maintain body reserves while feeding offspring},
+	volume = {92},
+	issn = {0012-9658},
+	shorttitle = {Plasticity in foraging strategies of inshore birds},
+	url = {http://doi.wiley.com/10.1890/11-0407.1},
+	doi = {10.1890/11-0407.1},
+	language = {en},
+	number = {10},
+	urldate = {2022-12-30},
+	journal = {Ecology},
+	author = {Saraux, Claire and Robinson-Laverick, Sarah M. and Le Maho, Yvon and Ropert-Coudert, Yan and Chiaradia, André},
+	month = oct,
+	year = {2011},
+	pages = {1909--1916},
+}
+
+@article{emerton_predicting_2022,
+	title = {Predicting the unprecedented: forecasting the {June} 2021 {Pacific} {Northwest} heatwave},
+	volume = {77},
+	issn = {0043-1656, 1477-8696},
+	shorttitle = {Predicting the unprecedented},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/wea.4257},
+	doi = {10.1002/wea.4257},
+	language = {en},
+	number = {8},
+	urldate = {2023-01-03},
+	journal = {Weather},
+	author = {Emerton, R. and Brimicombe, C. and Magnusson, L. and Roberts, C. and Di Napoli, C. and Cloke, H. L. and Pappenberger, F.},
+	month = aug,
+	year = {2022},
+	pages = {272--279},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\PEKWIUK7\\Emerton et al. - 2022 - Predicting the unprecedented forecasting the June.pdf:application/pdf},
 }
